# covid-19

./: .gitignore  404.html  Coronavirus cases.ipynb  README.md  _config.yml  cases_deaths_link.ipynb  daily_update.sh  index.html  index.md  main.py  plot.html  pyproject.toml  requirements.txt
_includes/: image.html  main-page-en.md  main-page-fr.md  plot.html
_layouts/: default.html
_sass/: bokeh-plot.scss  jekyll-theme-cayman.scss  variables.scss
assets/css/: style.scss
fr/: index.md
src/: bokeh_plot.py  generate_plot_html.py  utils.py
