[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["François Culière <francois.culiere@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
pandas = "^1.1.4"
seaborn = "^0.11.0"
bokeh = "^2.2.3"
scikit-learn = "^0.23.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
